# BestSeller

./: .gitignore  README.md  bitbucket-pipelines.yml
projects/xml-parser-service/: Dockerfile  README.md  dev.env  mypy.ini  pyproject.toml  template.yml
projects/xml-parser-service-lambda/: .coveragerc  .pylintrc  README.md  dev.env  template.yml
projects/xml-parser-service-lambda/events/: events.json
projects/xml-parser-service-lambda/scripts/: build_layers.sh  lint.sh  test.sh
projects/xml-parser-service-lambda/src/: requirements-dev.txt  requirements_layers.txt
projects/xml-parser-service-lambda/src/xml_parser_service/: constant.py  exceptions.py  helpers.py  lambda.py  main.py
projects/xml-parser-service-lambda/tests/xml_parser_service/: test_helpers.py  test_s3_helper.py
projects/xml-parser-service/scripts/: build_multiplatform.sh  deploy.sh  lint.sh  run_locally.sh  test.sh
projects/xml-parser-service/src/: requirements-dev.txt  requirements_layers.txt
projects/xml-parser-service/src/xml_parser_service/: constant.py  lambda.py  s3_helper.py
projects/xml-parser-service/tests/: conftest.py
projects/xml-parser-service/tests/xml_parser_service/: test_helpers.py  test_s3_helper.py
projects/xml-parser-service/xml_parser_service/: constant.py  main.py  models.py  s3_helper.py
